Added content to each div and changed some styling

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>I was born and raised in AZ.  I owe my travel bug to being a first generation American with family all over the world - we were always on the go!</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>My passion:  I LOVE music - it's one of the most powerful and diverse methods for expression & communication.  I spent most of my time listening to lots & lots of different types of music and creating playlists.</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>A fun fact: I was born in a bordertown so while growing up I spent half my time on one side and half the time in the other.  I am 100% bilingual!</p>
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
