Added header and footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     </head>
@@ -20,18 +21,31 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <section class="wrapper">
-            <div class="div-1">
+        <section class="flex-containter">
+            <header>
+                <h1>Hi. I'm Karime</h1>
+            </header>
+            <main>
+                <p>I am a <span>Responsive Designer & Developer</span> who focuses on visual simmetry and user experience.  When I'm not working and learning new skills, I can be found traveling, spending time with my husband and dog <span>Minerva</span> and playing tennis.</p>
+            </main>
+            <div id="div-1" class="flex-items">
                 <p>I was born and raised in AZ.  I owe my travel bug to being a first generation American with family all over the world - we were always on the go!</p>
             </div>
-            <div class="div-2">
+            <div id="div-2" class="flex-items">
                 <p>My passion:  I LOVE music - it's one of the most powerful and diverse methods for expression & communication.  I spent most of my time listening to lots & lots of different types of music and creating playlists.</p>
             </div>
-            <div class="div-3">
+            <div id="div-3" class="flex-items">
                 <p>A fun fact: I was born in a bordertown so while growing up I spent half my time on one side and half the time in the other.  I am 100% bilingual!</p>
             </div>
+            <footer>
+              <ul>
+                <li><a href="https://www.linkedin.com/in/karimeov/" target="_blank"><img src="img/linkedin.png" alt="Linkedin icon" id="linkedin-img"/></a></li>
+                <li><a href="https://twitter.com/karimeov" target="_blank"><img src="img/twitter.png" alt="Twitter icon" id="twitter-img"/></a></li>
+                <li><a href="https://www.pinterest.com/karimeov/" target="_blank"><img src="img/pinterest.png" alt="Pinterest icon" id="pinterest-img"/></a></li>
+              </ul>
+            </footer>
         </section>
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
